--- a/webApp/views/landingpage.hbs
+++ b/webApp/views/landingpage.hbs
@@ -1,9 +1,11 @@
-{{>navbar}}
-{{>heros}}
-{{>features}}
-{{>benefits}}
-{{>hiw}}
-{{>pricing}}
-{{>testimonials}}
-{{>faq}}
-{{>footer}}
+<div class="landing-page bg-gradient-to-b from-purple-200 to-white backdrop-blur-lg">
+  <div id="navbar">{{>navbar}}</div>
+  <div id="heros">{{>heros}}</div>
+  <div id="features">{{>features}}</div>
+  <div id="benefits">{{>benefits}}</div>
+  <div id="hiw">{{>hiw}}</div>
+  <div id="pricing">{{>pricing}}</div>
+  <div id="testimonials">{{>testimonials}}</div>
+  <div id="faq">{{>faq}}</div>
+  <div id="footer">{{>footer}}</div>
+</div>
