--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,7 +14,6 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-}
 
 .skeleton {
   width: 100%;
@@ -274,5 +273,6 @@ body {
 }
 .skeleton.active .sidebar .pages .page_link > span:nth-child(2) {
   display: block;
-}
+} */
 /*# sourceMappingURL=main.css.map */
+
