--- a/webApp/views/layouts/main.hbs
+++ b/webApp/views/layouts/main.hbs
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.x.x/dist/tailwind.min.css" rel="stylesheet">
-<<<<<<< Updated upstream
-    <link rel="stylesheet" href="css/main.css">
-    <title>{{pageTitle}}</title>
-=======
-    <title>QuantIQ</title>
-    <style>
-        .background-gradient {
-            background: linear-gradient(to right, #f7f7f7, #e9e9e9);
-        }
-    </style>
->>>>>>> Stashed changes
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.x.x/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.6/keen-slider.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <link rel="stylesheet" href="css/main.css">
+  <title>{{pageTitle}}</title>
 </head>
 <body>
-    {{{body}}}
-    <script src="js/skeleton.js"></script>
+  {{{body}}} 
+  <script src="js/skeleton.js"></script>
 </body>
 </html>
